--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="mobile-menu-close" src="./images/icon-close.svg" alt="logo">
     </div>
     <ul class="mobile-menu-nav">
-      <li>Fea<img class="social-logo" src="/images/icon-twitter.svg" alt="twitter logo">tures</li>
+      <li>Features</li>
       <li>Pricing</li>
       <li>Contact</li>
       <li class="login-container"><a href="#" class="login">Login</a></li>
@@ -55,7 +55,7 @@
       </div>
     </section>
     <section class="feature-section">
-      <h2>Feat<img class="social-logo" src="/images/icon-twitter.svg" alt="twitter logo">ures</h2>
+      <h2>Features</h2>
       <p class="feature-p">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
       <ul class="feature-slider">
         <li class="feature-tab selected">Simple Bookmarking</li>
