--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li>Features</li>
       <li>Pricing</li>
       <li>Contact</li>
-      <li class="login-container"><a href="#" class="login">Login</a></li>
+      <li class="mobile-login-container"><a href="#" class="mobile-login">Login</a></li>
     </ul>
     <div class="mobile-social-logo-flex">
       <img class="social-logo" src="/images/icon-facebook.svg" alt="facebook logo">
@@ -32,7 +32,7 @@
         <li>Features</li>
         <li>Pricing</li>
         <li>Contact</li>
-        <li><a href="#" class="login">Login</a></li>
+        <li><a href="#" class="desktop-login">Login</a></li>
       </ul>
     </nav>
     <img src="./images/icon-hamburger.svg" alt="hamburger icon" class="hamburger">
